mcabber (1.1.2)

 * Fix display when sending message to a full JID (Frank Zschockelt)

 -- Mikael, 2020-09-19

mcabber (1.1.1)

 * Fix compilation with GCC 10 or -fno-common in CFLAGS (Andrey Utkin)
 * Link against tinfo _or_ tinfow (Frank Zschockelt)
 * Fix otr disconnected message for otrv4, remove support for libotr 3.x
   (Frank Zschockelt)
 * Fix exiting from verbatim multiline mode (Michał Kępień)
 * Add support for displaying the number of unread messages for each roster
   entry (Michał Kępień)
 * Fix roster colors (Frank Zschockelt)
 * Add colorcli theme (Jonas Jared Jacek)
 * Hide the log window when log_win_height <= 0 (Frank Zschockelt)
 * Refactor carbon message handling
 * Other misc. bugfixes and cleanups

 -- Mikael, 2020-09-06

mcabber (1.1.0)

 * New "VI" mode (option 'vi_mode') (Holger Weiß)
 * Fix issues in buddylist rebuild (franky)
 * Do not use g_slist_free_full() which requires glib2 2.28.0 (Frank Bergmann)
 * Use UTF-8 validation of file content when sending a message from a file
 * Documentation updates

 -- Mikael, 2017-06-04

mcabber (1.0.5)

 * Much better performances with huge rosters (Frank Zschockelt)
 * Fix issue with carbons
 * Fix small memory leak
 * contrib/vim: Support reloading filetype detection

 -- Mikael, 2017-01-29

mcabber (1.0.4)

 * Bugfix: Check the origin of roster pushes
   Cf. Gajim's CVE-2015-8688 and
   https://gultsch.de/gajim_roster_push_and_message_interception.html

 -- Mikael, 2016-11-21

mcabber (1.0.3)

 * Link with the tinfo library
 * Fix default modules directory on OpenBSD (Tim van der Molen)
 * Create history log dir if it doesn't exist (Andrey Utkin)
 * [OTR] Do not send empty subjects when using otr (franky)
 * [UI] /set does not display password values anymore (Egor Kovetskiy)
 * [MUC] Use nick to set the role
 * Misc help/documentation updates

 -- Mikael, 2016-09-18

mcabber (1.0.2)

 * Compatible with Loudmouth >=1.5.3 with SHA256 support (Frank Zschockelt)