@@ -2993,7 +2993,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Version 1.1.2<br>
+Version 1.1.3-dev<br>
 Last updated
  2020-09-06 19:21:53 CEST
 </div>
