@@ -1,3 +1,9 @@
+mcabber (1.1.3-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.1.2)
 
  * Fix display when sending message to a full JID (Frank Zschockelt)
